@@ -75,7 +75,7 @@ class ModuleIsotopeProductReader extends ModuleIsotope
 
 		if ($objProduct)
 		{
-			return $objProduct->generateAjax();
+			return $objProduct->generateAjax($this);
 		}
 
 		return '';
