@@ -1,5 +1,6 @@
 #iso_ajaxBox{width:20%;position:absolute;top:30px;left:40%;background:#fff url(../../../themes/default/images/loading.gif) no-repeat center right;border:2px solid #000;font-family:"Trebuchet MS",Verdana,sans-serif;font-size:15px;text-align:left;padding:24px}
 #iso_ajaxOverlay{width:100%;height:100%;position:absolute;top:0;left:0;background-color:#000;-moz-opacity:.3;opacity:.3}
+.iso_attribute{display:inline}
 .mod_iso_addressbook ul{list-style-type:none;margin:0;padding:0}
 .mod_iso_addressbook li{margin:0;padding:0}
 .mod_iso_addressbook li .buttons{float:right;margin-left:20px}
